@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
title Class structure — Generate a full-stack solution

interface IFullStackGenerator {
  +GenerateAsync(manifest: ValidatedManifest, force: bool, cancellationToken): Task<GenerationResult>
}
class FullStackGenerator {
  -ITransactionalGenerationOutput output
  +GenerateAsync(manifest: ValidatedManifest, force: bool, cancellationToken): Task<GenerationResult>
  -RenderAsync(root, manifest, cancellationToken): Task
}
class ValidatedManifest {
  +Name: string
  +OutputRoot: string
  +Entities: IReadOnlyList<ValidatedEntity>
  +Pages: IReadOnlyList<ValidatedPage>
  +Components: IReadOnlyList<ValidatedComponent>
}
class ValidatedEntity
class ValidatedPage
class ValidatedComponent
interface ITransactionalGenerationOutput
class SafeFileWriter
class GenerationResult

IFullStackGenerator <|.. FullStackGenerator
FullStackGenerator --> ITransactionalGenerationOutput : commits through
FullStackGenerator ..> SafeFileWriter : renders through
FullStackGenerator ..> GenerationResult : returns
FullStackGenerator --> ValidatedManifest : consumes
ValidatedManifest *-- ValidatedEntity
ValidatedManifest *-- ValidatedPage
ValidatedManifest *-- ValidatedComponent
@enduml
